// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_COMPLETE 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Remove"
        id="be.remove"
      />
    }
    theme="default"
  >
    <PlainButton
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconCheck
        color="#26C281"
      />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_COMPLETE and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <IconCheck
    color="#26C281"
  />
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_ERROR 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Retry"
        id="be.retry"
      />
    }
    theme="default"
  >
    <PlainButton
      data-resin-target="uploadretry"
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconRetry
        height={24}
        width={24}
      />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_ERROR and item is folder 1`] = `""`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_ERROR and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Resume"
        id="be.resume"
      />
    }
    theme="default"
  >
    <PlainButton
      data-resin-target="uploadretry"
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconRetry
        height={24}
        width={24}
      />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_IN_PROGRESS 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Cancel this upload"
        id="be.uploadsCancelButtonTooltip"
      />
    }
    theme="default"
  >
    <PlainButton
      data-resin-target="uploadcancel"
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconInProgress />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_IN_PROGRESS and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <LoadingIndicator />
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_PENDING 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Cancel this upload"
        id="be.uploadsCancelButtonTooltip"
      />
    }
    theme="default"
  >
    <PlainButton
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <IconClose />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_PENDING and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <IconClose />
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_STAGED 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Cancel this upload"
        id="be.uploadsCancelButtonTooltip"
      />
    }
    theme="default"
  >
    <PlainButton
      data-resin-target="uploadcancel"
      isDisabled={true}
      onClick={[Function]}
      type="button"
    >
      <IconInProgress />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_STAGED and resumable uploads enabled 1`] = `
<div
  className="bcu-item-action"
>
  <LoadingIndicator />
</div>
`;
